--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,6 @@
 # Use PHP5.6 Single php.ini as default
-AddHandler php70-fcgi .php
+AddHandler application/x-httpd-php56s .php
 
-<FilesMatch \.php$>
-SetHandler php70-cgi
-</FilesMatch>
 
 <IfModule mod_rewrite.c>
     RewriteEngine On
